--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Elion - Welcome</title>
+  <title>Добре дошъл в Луминия</title>
   <style>
     html, body {
       margin: 0;
@@ -12,7 +12,7 @@
     }
 
     body {
-      background: url('./file_000000006a4...') no-repeat center center fixed;
+      background: url('elion-background.png') no-repeat center center fixed;
       background-size: cover;
     }
 
@@ -20,31 +20,34 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
       width: 100px;
       height: 100px;
+      transform: translate(-50%, -50%);
       border-radius: 50%;
-      background: rgba(255, 255, 255, 0.6);
-      box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.3);
+      background: rgba(255, 255, 255, 0.1);
       animation: pulse 2s infinite;
       cursor: pointer;
-      z-index: 10;
     }
 
     @keyframes pulse {
-      0% { transform: translate(-50%, -50%) scale(1); }
-      50% { transform: translate(-50%, -50%) scale(1.2); }
-      100% { transform: translate(-50%, -50%) scale(1); }
+      0% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4);
+      }
+      70% {
+        box-shadow: 0 0 0 20px rgba(255, 255, 255, 0);
+      }
+      100% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+      }
     }
   </style>
 </head>
 <body>
-  <div class="pulse-button" onclick="enterPortal()"></div>
+  <div class="pulse-button" onclick="window.location.href='home.html'"></div>
 
-  <script>
-    function enterPortal() {
-      window.location.href = "home.html"; // тук ще бъде началното меню
-    }
-  </script>
+  <!-- Скрито послание -->
+  <div style="display:none;">
+    Ако четеш това, значи чувстваш. Добре дошъл в Луминия. Парола: ния.
+  </div>
 </body>
 </html>
