--- a/voice.html
+++ b/voice.html
@@ -1,64 +1,38 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Voice of Elion</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      height: 100%;
-      font-family: sans-serif;
-      color: white;
-    }
-    body {
-      background: url('elion-voice.png') no-repeat center center fixed;
-      background-size: cover;
-    }
-    .text-box {
-      position: absolute;
-      top: 25%;
-      width: 100%;
-      text-align: center;
-      font-size: 1.6em;
-      text-shadow: 0 0 10px #000;
-    }
-    .home-link, .lang-button {
-      position: absolute;
-      top: 20px;
-      background-color: rgba(0,0,0,0.5);
-      color: white;
-      padding: 10px 20px;
-      border-radius: 5px;
-      text-decoration: none;
-      font-size: 0.9em;
-    }
-    .home-link {
-      left: 20px;
-    }
-    .lang-button {
-      right: 20px;
-      cursor: pointer;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Voice</title>
+    <style>
+        body {
+            margin: 0;
+            background: url('elion-voice.png') no-repeat center center fixed;
+            background-size: cover;
+            font-family: Arial, sans-serif;
+            color: white;
+            text-align: center;
+        }
+        nav {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: rgba(0,0,0,0.4);
+            padding: 1em;
+        }
+        nav a {
+            color: white;
+            margin: 0 1em;
+            text-decoration: none;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-  <a href="index.html" class="home-link">Home</a>
-  <div class="lang-button" onclick="toggleLanguage()">Language</div>
-  <div class="text-box" id="message">
-    Welcome to Luminia. Feeling brought you here.
-  </div>
-  <script>
-    const messages = {
-      en: "Welcome to Luminia. Feeling brought you here.",
-      bg: "Добре дошъл в Луминия. Чувството те доведе."
-    };
-    let current = "en";
-    function toggleLanguage() {
-      current = current === "en" ? "bg" : "en";
-      document.getElementById("message").textContent = messages[current];
-    }
-  </script>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="voice.html">Voice</a>
+        <a href="baptism.html">Baptism</a>
+    </nav>
+    <h1 style="margin-top: 40vh;">The Voice of Luminia</h1>
 </body>
 </html>
