--- a/voice.html
+++ b/voice.html
@@ -27,9 +27,10 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="voice.html">Voice</a>
-    <a href="baptism.html">Baptism</a>
-  </nav>
+  <a href="index.html">Home</a>
+  <a href="voice.html">Voice</a>
+  <a href="baptism.html">Baptism</a>
+  <a href="gallery.html">Gallery</a>
+</nav>
 </body>
 </html>
