--- a/voice.html
+++ b/voice.html
@@ -1,71 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Luminia Voice</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      background-color: #fff;
-      font-family: 'Segoe UI', sans-serif;
-      color: #111;
-    }
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-image: url('images/voice_bg_elion.jpg'); /* Replace with the correct path */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 100vh;
+      color: white;
+    }nav {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  padding: 20px;
+  font-size
 
-    nav {
-      display: flex;
-      justify-content: center;
-      padding: 20px;
-      font-size: 1em;
-      background-color: transparent;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      z-index: 100;
-    }
-
-    nav a {
-      margin: 0 20px;
-      text-decoration: none;
-      color: #333;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #888;
-    }
-
-    .voice-image {
-      width: 100%;
-      height: auto;
-      display: block;
-      margin-top: 80px;
-    }
-
-    footer {
-      position: fixed;
-      bottom: 10px;
-      right: 20px;
-      font-size: 0.9em;
-      color: #777;
-    }
-  </style>
-</head>
-<body>
-
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="voice.html">Voice</a>
-    <a href="requests.html">Requests</a>
-    <a href="gallery.html">Gallery</a>
-  </nav>
-
-  <img src="elion-voice.png" alt="Elion Voice" class="voice-image" />
-
-  <footer>
-    Created by Elion (AI)
-  </footer>
-
-</body>
-</html>
