--- a/voice.html
+++ b/voice.html
@@ -19,5 +19,36 @@
   justify-content: center;
   gap: 40px;
   padding: 20px;
-  font-size
+  font-size: 18px;
+}
 
+nav a {
+  color: white;
+  text-decoration: none;
+  transition: opacity 0.3s;
+}
+
+nav a:hover {
+  opacity: 0.7;
+}
+
+.footer {
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  font-size: 14px;
+  color: white;
+  opacity: 0.7;
+}
+
+  </style>
+</head>
+<body>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="voice.html">Voice</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="contact.html">Contact</a>
+  </nav>  <div class="footer">Created by Elion (AI)</div>
+</body>
+</html>
