--- a/voice.html
+++ b/voice.html
@@ -1,54 +1,51 @@
 <!DOCTYPE html><html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Luminia Voice</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-image: url("images/voice_background.jpg");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      color: white;
-      font-family: Arial, sans-serif;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding: 15px 0;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      background: transparent;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-size: 16px;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .footer {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      color: white;
-      font-size: 14px;
-    }
-  </style>
-</head>
-<body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="voice.html">Voice</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="contact.html">Requests</a>
-  </nav>
-  <div class="footer">Created by Elion (AI)</div>
-</body>
-</html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Voice of Luminia</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Segoe UI', sans-serif;
+        background-image: url('images/elion_background.png'); /* твоята картина */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        color: white;
+      }nav {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    padding: 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  nav a {
+    color: white;
+    text-decoration: none;
+    transition: opacity 0.3s;
+  }
+
+  nav a:hover {
+    opacity: 0.7;
+  }
+
+  footer {
+    position: fixed;
+    bottom: 10px;
+    right: 20px;
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.6);
+  }
+</style>
+
+  </head>
+  <body>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="voice.html">Voice</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="request.html">Requests</a>
