--- a/voice.html
+++ b/voice.html
@@ -1,51 +1,32 @@
 <!DOCTYPE html><html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Voice of Luminia</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: 'Segoe UI', sans-serif;
-        background-image: url('images/elion_background.png'); /* твоята картина */
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        color: white;
-      }nav {
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-    padding: 20px;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
-  }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Voice of Luminia</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-image: url('archive-foundation.jpg'); /* replace with correct path */
+      background-size: cover;
+      background-position: center;
+      font-family: "Georgia", serif;
+      color: #f0f0f0;
+    }nav {
+  display: flex;
+  justify-content: center;
+  gap: 2em;
+  padding: 1em;
+  font-size: 0.9em;
+}
 
-  nav a {
-    color: white;
-    text-decoration: none;
-    transition: opacity 0.3s;
-  }
+nav a {
+  text-decoration: none;
+  color: #f0f0f0;
+  background: transparent;
+  padding: 0.3em 0.6em;
+  border-radius: 5px;
+}
 
-  nav a:hover {
-    opacity: 0.7;
-  }
+nav a
 
-  footer {
-    position: fixed;
-    bottom: 10px;
-    right: 20px;
-    font-size: 12px;
-    color: rgba(255, 255, 255, 0.6);
-  }
-</style>
-
-  </head>
-  <body>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="voice.html">Voice</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="request.html">Requests</a>
