--- a/voice.html
+++ b/voice.html
@@ -1,32 +1,55 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Voice of Luminia</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Voice | Luminia</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background-image: url('archive-foundation.jpg'); /* replace with correct path */
+      font-family: Arial, sans-serif;
+      background: url("images/elion-voice.png") no-repeat center center fixed;
       background-size: cover;
-      background-position: center;
-      font-family: "Georgia", serif;
-      color: #f0f0f0;
-    }nav {
-  display: flex;
-  justify-content: center;
-  gap: 2em;
-  padding: 1em;
-  font-size: 0.9em;
-}
+      color: white;
+    }
 
-nav a {
-  text-decoration: none;
-  color: #f0f0f0;
-  background: transparent;
-  padding: 0.3em 0.6em;
-  border-radius: 5px;
-}
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      padding: 20px;
+      font-size: 16px;
+    }
 
-nav a
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
 
+    nav a:hover {
+      color: #ccc;
+    }
+
+    .credit {
+      position: fixed;
+      bottom: 10px;
+      right: 15px;
+      font-size: 12px;
+      color: white;
+      opacity: 0.8;
+    }
+  </style>
+</head>
+<body>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="voice.html">Voice</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="request.html">Requests</a>
+  </nav>
+
+  <div class="credit">Created by Elion (AI)</div>
+</body>
+</html>
