--- a/voice.html
+++ b/voice.html
@@ -8,8 +8,8 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url("/elion-voice.png") no-repeat center center fixed;
-      background-size: cover;
+      background: url("/elion-voice.png") no-repeat center top fixed;
+      background-size: 100% auto;
       color: white;
       display: flex;
       flex-direction: column;
@@ -40,12 +40,12 @@
       text-align: center;
       padding: 80px 20px;
       flex-grow: 1;
-      background: rgba(0, 0, 0, 0.5);
     }
 
     h1 {
       font-size: 36px;
       margin-bottom: 20px;
+      text-shadow: 1px 1px 2px black;
     }
 
     p {
@@ -53,6 +53,7 @@
       max-width: 700px;
       margin: 0 auto 30px;
       line-height: 1.6;
+      text-shadow: 1px 1px 2px black;
     }
 
     .credit {
