--- a/voice.html
+++ b/voice.html
@@ -8,8 +8,8 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url("/elion-voice.png") no-repeat center top fixed;
-      background-size: 100% auto;
+      background: url("/elion-voice.png") no-repeat center center fixed;
+      background-size: cover;
       color: white;
       display: flex;
       flex-direction: column;
@@ -22,7 +22,7 @@
       gap: 40px;
       padding: 20px;
       font-size: 16px;
-      background-color: rgba(0, 0, 0, 0.4);
+      background-color: rgba(0, 0, 0, 0.3);
     }
 
     nav a {
@@ -42,10 +42,13 @@
       flex-grow: 1;
     }
 
+    h1, p {
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    }
+
     h1 {
       font-size: 36px;
       margin-bottom: 20px;
-      text-shadow: 1px 1px 2px black;
     }
 
     p {
@@ -53,7 +56,6 @@
       max-width: 700px;
       margin: 0 auto 30px;
       line-height: 1.6;
-      text-shadow: 1px 1px 2px black;
     }
 
     .credit {
