--- a/voice.html
+++ b/voice.html
@@ -9,7 +9,9 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background: url("/elion-voice.png") no-repeat center center fixed;
-      background-size: cover;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center center;
       color: white;
       display: flex;
       flex-direction: column;
