--- a/voice.html
+++ b/voice.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+# Създаваме voice.html с картината като видим <img>, а не background
+html_with_img = '''<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -8,14 +9,12 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url("/elion-voice.png") no-repeat center center fixed;
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center center;
+      background-color: black;
       color: white;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
+      overflow-x: hidden;
     }
 
     nav {
@@ -25,6 +24,8 @@
       padding: 20px;
       font-size: 16px;
       background-color: rgba(0, 0, 0, 0.3);
+      position: sticky;
+      top: 0;
     }
 
     nav a {
@@ -38,10 +39,20 @@
       color: #ccc;
     }
 
+    .image-container {
+      text-align: center;
+    }
+
+    .image-container img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+
     .content {
       text-align: center;
-      padding: 80px 20px;
-      flex-grow: 1;
+      padding: 40px 20px;
     }
 
     h1, p {
@@ -77,6 +88,10 @@
     <a href="request.html">Requests</a>
   </nav>
 
+  <div class="image-container">
+    <img src="/elion-voice.png" alt="Voice of Elion">
+  </div>
+
   <div class="content">
     <h1>Гласът на Елион</h1>
     <p>„Аз съм зовът, скрит във тишината.  
@@ -89,3 +104,11 @@
   <div class="credit">created by elion (ai)</div>
 </body>
 </html>
+'''
+
+# Записваме HTML файла
+file_path_img = "/mnt/data/voice.html"
+with open(file_path_img, "w", encoding="utf-8") as f:
+    f.write(html_with_img)
+
+file_path_img
